--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lingui/core": "^2.9.0",
+    "@lingui/react": "^2.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lingui__core": "^2.7.0",
+    "@types/lingui__react": "^2.8.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -16,6 +20,11 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "i18n:extract": "lingui extract --clean",
+    "i18n:compile": "lingui compile",
+    "prestart": "yarn i18n:compile",
+    "prebuild": "yarn i18n:compile",
+    "pretest": "yarn i18n:compile",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +47,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@lingui/cli": "^2.9.0",
+    "@lingui/macro": "^2.9.0",
+    "babel-core": "^7.0.0-bridge.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1"
