--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
     "@lingui/core": "^2.9.0",
     "@lingui/react": "^2.9.0",
     "@testing-library/jest-dom": "^4.2.4",
