--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "shabnam-font": "^5.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
