--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
