--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-relay": "^7.0.3",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^0.0.0-experimental-b53ea6ca0",
+    "react-dom": "^0.0.0-experimental-b53ea6ca0",
+    "react-relay": "^0.0.0-experimental-a1a40b68",
     "react-scripts": "3.3.0",
+    "relay-compiler-language-typescript": "^10.1.3",
     "shabnam-font": "^5.0.0",
     "typescript": "~3.7.2"
   },
@@ -36,7 +39,8 @@
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "format:check": "prettier --check '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "relay": "relay-compiler --src ./src --schema ./schema.graphql --extensions ts tsx --language typescript"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -64,8 +68,12 @@
     "@storybook/react": "^5.2.8",
     "@storybook/source-loader": "^5.2.8",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-plugin-relay": "^7.1.0",
+    "graphql": "^14.5.8",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "relay-compiler": "^7.1.0",
+    "relay-config": "^7.1.0"
   }
 }
