--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-relay": "^7.0.3",
+    "@types/relay-runtime": "^6.0.11",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
     "react": "^0.0.0-experimental-b53ea6ca0",
@@ -23,6 +24,7 @@
     "react-relay": "^0.0.0-experimental-a1a40b68",
     "react-scripts": "3.3.0",
     "relay-compiler-language-typescript": "^10.1.3",
+    "relay-runtime": "^7.1.0",
     "shabnam-font": "^5.0.0",
     "typescript": "~3.7.2"
   },
@@ -40,8 +42,10 @@
     "format:check": "prettier --check '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "relay": "relay-compiler --src ./src --schema ./schema.graphql --extensions ts tsx --language typescript"
+    "relay": "relay-compiler --src ./src --schema ./schema.graphql --extensions ts tsx --language typescript",
+    "get-schema": "graphql get-schema -e default"
   },
+  "proxy": "http://127.0.0.1:8000/",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -70,6 +74,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-relay": "^7.1.0",
     "graphql": "^14.5.8",
+    "graphql-cli": "^3.0.14",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
