--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "babel-plugin-relay": "^7.1.0",
     "graphql": "^14.5.8",
     "graphql-cli": "^3.0.14",
+    "http-proxy-middleware": "^0.20.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
