chore: add forminator and themeDecorator

--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@types/jest": "^24.0.0",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__react": "^2.8.1",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "^12.0.0",
+    "@types/ramda": "^0.26.37",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-relay": "^7.0.3",
     "@types/relay-runtime": "^6.0.11",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
+    "mitt": "^1.2.0",
+    "nanoid": "^2.1.7",
+    "ramda": "^0.26.1",
     "react": "^0.0.0-experimental-b53ea6ca0",
     "react-dom": "^0.0.0-experimental-b53ea6ca0",
     "react-relay": "^0.0.0-experimental-a1a40b68",
