--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mitt": "^1.2.0",
     "nanoid": "^2.1.7",
     "ramda": "^0.26.1",
+    "lorem-ipsum": "^2.0.3",
     "react": "^0.0.0-experimental-b53ea6ca0",
     "react-dom": "^0.0.0-experimental-b53ea6ca0",
     "react-relay": "^0.0.0-experimental-a1a40b68",
