--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-relay": "^7.0.3",
+    "@types/react-router-dom": "^5.1.3",
     "@types/relay-runtime": "^6.0.11",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
@@ -28,6 +29,7 @@
     "react": "^0.0.0-experimental-b53ea6ca0",
     "react-dom": "^0.0.0-experimental-b53ea6ca0",
     "react-relay": "^0.0.0-experimental-a1a40b68",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "relay-compiler-language-typescript": "^10.1.3",
     "relay-runtime": "^7.1.0",
