--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@types/relay-runtime": "^6.0.11",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
+    "lorem-ipsum": "^2.0.3",
     "mitt": "^1.2.0",
     "nanoid": "^2.1.7",
     "ramda": "^0.26.1",
-    "lorem-ipsum": "^2.0.3",
     "react": "^0.0.0-experimental-b53ea6ca0",
     "react-dom": "^0.0.0-experimental-b53ea6ca0",
     "react-relay": "^0.0.0-experimental-a1a40b68",
@@ -74,6 +74,7 @@
     "@lingui/cli": "^2.9.0",
     "@lingui/macro": "^2.9.0",
     "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-backgrounds": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addon-storysource": "^5.2.8",
     "@storybook/addons": "^5.2.8",
@@ -88,6 +89,7 @@
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "relay-compiler": "^7.1.0",
-    "relay-config": "^7.1.0"
+    "relay-config": "^7.1.0",
+    "storybook-addon-selector": "^5.2.8-1"
   }
 }
