--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@lingui/core": "^2.9.0",
     "@lingui/react": "^2.9.0",
     "@material-ui/core": "^4.7.1",
+    "@material-ui/lab": "^4.0.0-alpha.35",
     "@types/jest": "^24.0.0",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__react": "^2.8.1",
