--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@lingui/core": "^2.9.0",
     "@lingui/react": "^2.9.0",
     "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.35",
     "@types/jest": "^24.0.0",
     "@types/lingui__core": "^2.7.0",
@@ -69,9 +70,6 @@
     "@babel/core": "^7.7.5",
     "@lingui/cli": "^2.9.0",
     "@lingui/macro": "^2.9.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-backgrounds": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
@@ -79,6 +77,9 @@
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
     "@storybook/source-loader": "^5.2.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-relay": "^7.1.0",
     "graphql": "^14.5.8",
