--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-relay": "^7.0.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/relay-runtime": "^6.0.11",
+    "clsx": "^1.0.4",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
     "lorem-ipsum": "^2.0.3",
