chore: rename severname to _

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -1,7 +1,6 @@
 server {
-  listen 80 default deferred;
-
-  server_name performance-review;
+  listen       80  default_server;
+  server_name  _;
 
   root /usr/share/nginx/html;
 
