--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.35",
+    "@mdx-js/react": "^1.5.3",
     "@types/jest": "^24.0.0",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__react": "^2.8.1",
