--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lingui__react": "^2.8.1",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^12.0.0",
+    "@types/overlayscrollbars": "^1.9.0",
     "@types/ramda": "^0.26.37",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -28,6 +29,7 @@
     "mitt": "^1.2.0",
     "nanoid": "^2.1.7",
     "notistack": "^0.9.7",
+    "overlayscrollbars": "^1.10.2",
     "ramda": "^0.26.1",
     "react": "^0.0.0-experimental-f42431abe",
     "react-dom": "^0.0.0-experimental-f42431abe",
