--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ramda": "^0.26.1",
     "react": "^0.0.0-experimental-f42431abe",
     "react-dom": "^0.0.0-experimental-f42431abe",
+    "react-intersection-observer": "^8.25.2",
     "react-relay": "^0.0.0-experimental-5f1cb628",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
