--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^24.0.0",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__react": "^2.8.1",
+    "@types/luxon": "^1.21.0",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^12.0.0",
     "@types/overlayscrollbars": "^1.9.0",
@@ -25,6 +26,7 @@
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
     "lorem-ipsum": "^2.0.3",
+    "luxon": "^1.21.3",
     "mdx.macro": "^0.2.9",
     "mitt": "^1.2.0",
     "nanoid": "^2.1.7",
