--- a/package.json
+++ b/package.json
@@ -76,16 +76,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
+    "@babel/core": "^7.8.3",
     "@lingui/cli": "^2.9.0",
     "@lingui/macro": "^2.9.0",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-backgrounds": "^5.2.8",
-    "@storybook/addon-links": "^5.2.8",
-    "@storybook/addon-storysource": "^5.2.8",
-    "@storybook/addons": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "@storybook/source-loader": "^5.2.8",
+    "@storybook/addon-actions": "^5.3.10",
+    "@storybook/addon-backgrounds": "^5.3.10",
+    "@storybook/addon-links": "^5.3.10",
+    "@storybook/addon-storysource": "^5.3.10",
+    "@storybook/addons": "^5.3.10",
+    "@storybook/react": "^5.3.10",
+    "@storybook/source-loader": "^5.3.10",
+    "@storybook/core": "^5.3.10",
+    "@storybook/preset-create-react-app": "^1.5.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -100,6 +102,6 @@
     "relay-compiler": "^8.0.0",
     "relay-compiler-language-typescript": "^10.1.3",
     "relay-config": "^8.0.0",
-    "storybook-addon-selector": "^5.2.8-1"
+    "storybook-addon-selector": "^5.3.9-2"
   }
 }
