--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^0.0.0-experimental-241c4467e",
     "react-intersection-observer": "^8.25.2",
     "react-relay": "^0.0.0-experimental-5f1cb628",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^6.0.0-alpha.1",
+    "react-router-dom": "^6.0.0-alpha.1",
     "react-scripts": "3.3.1",
     "relay-runtime": "^8.0.0",
     "shabnam-font": "^5.0.0",
