--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
     "@mdx-js/react": "^1.5.3",
+    "@types/base64-url": "^2.2.0",
     "@types/jest": "^25.1.2",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__react": "^2.8.1",
@@ -22,6 +23,7 @@
     "@types/react-relay": "^7.0.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/relay-runtime": "^8.0.6",
+    "base64-url": "^2.3.3",
     "clsx": "^1.0.4",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
