--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-relay": "^7.0.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/relay-runtime": "^8.0.6",
+    "@types/relay-test-utils": "^6.0.1",
     "base64-url": "^2.3.3",
     "clsx": "^1.0.4",
     "jss": "^10.0.0",
@@ -42,6 +43,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "relay-runtime": "^8.0.0",
+    "relay-test-utils": "^9.0.0",
     "shabnam-font": "^5.0.0",
     "typescript": "~3.7.2"
   },
