--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ramda": "^0.27.0",
     "react": "^0.0.0-experimental-241c4467e",
     "react-dom": "^0.0.0-experimental-241c4467e",
+    "react-flip-toolkit": "^7.0.8",
     "react-intersection-observer": "^8.25.2",
     "react-relay": "^0.0.0-experimental-5f1cb628",
     "react-router-dom": "^5.1.2",
