--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "luxon": "^1.21.3",
     "mdx.macro": "^0.2.9",
     "mitt": "^1.2.0",
+    "mkdirp": "^1.0.3",
     "nanoid": "^2.1.7",
     "notistack": "^0.9.7",
     "overlayscrollbars": "^1.10.2",
