--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "luxon": "^1.21.3",
     "mdx.macro": "^0.2.9",
     "mitt": "^1.2.0",
-    "mkdirp": "^1.0.3",
     "nanoid": "^2.1.7",
     "notistack": "^0.9.7",
     "overlayscrollbars": "^1.10.2",
@@ -46,7 +45,8 @@
     "relay-runtime": "^9.0.0",
     "relay-test-utils": "^9.0.0",
     "shabnam-font": "^5.0.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "yargs": "^15.3.1"
   },
   "scripts": {
     "i18n:extract": "lingui extract --clean",
@@ -64,7 +64,7 @@
     "format:check": "prettier --check '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "relay": "relay-compiler --src ./src --schema ./schema.graphql --extensions ts tsx --language typescript",
+    "relay": "relay-compiler --src ./src --schema ./schema.graphql --extensions ts tsx --language typescript && ./relay-enum-generator.ts",
     "get-schema": "graphql get-schema -e default"
   },
   "eslintConfig": {
@@ -98,6 +98,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^8.1.0",
+    "@types/yargs": "^15.0.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-relay": "^8.0.0",
     "graphql": "^14.5.8",
