chore: install relay-enum-generator version 0.0.1

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-relay": "^0.0.0-experimental-5f1cb628",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "relay-enum-generator": "^0.0.1",
     "relay-runtime": "^9.0.0",
     "relay-test-utils": "^9.0.0",
     "shabnam-font": "^5.0.0",
