upgrade react, relay

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@types/node": "^13.7.0",
     "@types/overlayscrollbars": "^1.9.0",
     "@types/ramda": "^0.26.37",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-relay": "^7.0.3",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-relay": "^7.0.7",
     "@types/react-router-dom": "^5.1.5",
-    "@types/relay-runtime": "^8.0.7",
-    "@types/relay-test-utils": "^6.0.1",
+    "@types/relay-runtime": "^8.0.9",
+    "@types/relay-test-utils": "^6.0.2",
     "base64-url": "^2.3.3",
     "clsx": "^1.0.4",
     "jss": "^10.0.0",
@@ -36,15 +36,15 @@
     "notistack": "^0.9.7",
     "overlayscrollbars": "^1.10.2",
     "ramda": "^0.27.0",
-    "react": "0.0.0-experimental-aae83a4b9",
-    "react-dom": "0.0.0-experimental-aae83a4b9",
+    "react": "^0.0.0-experimental-33c3af284",
+    "react-dom": "^0.0.0-experimental-33c3af284",
     "react-intersection-observer": "^8.25.2",
-    "react-relay": "^0.0.0-experimental-5f1cb628",
+    "react-relay": "^0.0.0-experimental-895a6fe0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "relay-enum-generator": "^0.0.1",
-    "relay-runtime": "^9.0.0",
-    "relay-test-utils": "^9.0.0",
+    "relay-enum-generator": "^0.0.3",
+    "relay-runtime": "^9.1.0",
+    "relay-test-utils": "^9.1.0",
     "shabnam-font": "^5.0.0",
     "typescript": "~3.8.3"
   },
@@ -100,7 +100,7 @@
     "@testing-library/user-event": "^8.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-relay": "^8.0.0",
-    "graphql": "^14.5.8",
+    "graphql": "^15.0.0",
     "graphql-cli": "^3.0.14",
     "http-proxy-middleware": "^0.20.0",
     "husky": "^4.2.1",
@@ -109,9 +109,9 @@
     "import-sort-style-renke": "^6.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.0.1",
-    "relay-compiler": "^9.0.0",
-    "relay-compiler-language-typescript": "^12.0.0",
-    "relay-config": "^9.0.0",
+    "relay-compiler": "^9.1.0",
+    "relay-compiler-language-typescript": "^12.0.2",
+    "relay-config": "^9.1.0",
     "storybook-addon-selector": "^5.3.9-2"
   }
 }
