--- a/package.json
+++ b/package.json
@@ -86,19 +86,17 @@
     "@babel/core": "^7.9.0",
     "@lingui/cli": "^2.9.0",
     "@lingui/macro": "^2.9.0",
-    "@storybook/addon-actions": "^5.3.10",
-    "@storybook/addon-backgrounds": "^5.3.10",
-    "@storybook/addon-links": "^5.3.10",
-    "@storybook/addon-storysource": "^5.3.10",
-    "@storybook/addons": "^5.3.10",
-    "@storybook/core": "^5.3.10",
-    "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.10",
-    "@storybook/source-loader": "^5.3.10",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/node-logger": "^6.0.21",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.21",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^8.1.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-relay": "^9.1.0",
     "graphql": "^15.0.0",
     "graphql-cli": "^3.0.14",
@@ -109,6 +107,7 @@
     "import-sort-style-renke": "^6.0.0",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
+    "react-is": "^16.13.1",
     "relay-compiler": "^9.1.0",
     "relay-compiler-language-typescript": "^12.0.2",
     "relay-config": "^9.1.0",
