--- a/package.json
+++ b/package.json
@@ -110,7 +110,6 @@
     "react-is": "^16.13.1",
     "relay-compiler": "^9.1.0",
     "relay-compiler-language-typescript": "^12.0.2",
-    "relay-config": "^9.1.0",
-    "storybook-addon-selector": "^5.3.9-2"
+    "relay-config": "^9.1.0"
   }
 }
