--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@lingui/core": "^2.9.0",
     "@lingui/react": "^2.9.0",
-    "@material-ui/core": "^4.9.7",
+    "@material-ui/core": "^5.0.0-alpha.10",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/lab": "^5.0.0-alpha.10",
     "@mdx-js/react": "^1.5.3",
     "@types/base64-url": "^2.2.0",
     "@types/jest": "^25.1.2",
