--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "notistack": "^0.9.7",
     "overlayscrollbars": "^1.10.2",
     "ramda": "^0.27.0",
-    "react": "^0.0.0-experimental-94c0244ba",
-    "react-dom": "^0.0.0-experimental-94c0244ba",
+    "react": "0.0.0-experimental-94c0244ba",
+    "react-dom": "0.0.0-experimental-94c0244ba",
     "react-intersection-observer": "^8.25.2",
     "react-relay": "^0.0.0-experimental-895a6fe0",
     "react-router-dom": "^5.2.0",
