Round and startText (#315)
* chore: update schema

* chore: remove luxon package

* chore: use startText

Start card text now come from server and are no longer stored on the
frontend app.
startText is formatted as markdown and react-markdown renders it with the given
components.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/jest": "^25.1.2",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__react": "^2.8.1",
-    "@types/luxon": "^1.21.0",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^13.7.0",
     "@types/overlayscrollbars": "^1.9.0",
@@ -29,7 +28,6 @@
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
     "lorem-ipsum": "^2.0.3",
-    "luxon": "^1.21.3",
     "mdx.macro": "^0.2.9",
     "mitt": "^1.2.0",
     "nanoid": "^2.1.7",
@@ -39,6 +37,7 @@
     "react": "0.0.0-experimental-94c0244ba",
     "react-dom": "0.0.0-experimental-94c0244ba",
     "react-intersection-observer": "^8.25.2",
+    "react-markdown": "^5.0.0",
     "react-relay": "^0.0.0-experimental-895a6fe0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
