--- a/package.json
+++ b/package.json
@@ -110,5 +110,6 @@
     "relay-compiler": "^9.1.0",
     "relay-compiler-language-typescript": "^12.0.2",
     "relay-config": "^9.1.0"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
