--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.46",
     "@mdx-js/react": "^1.5.3",
+    "@react-stately/utils": "^3.2.2",
     "@types/base64-url": "^2.2.0",
     "@types/jest": "^25.1.2",
     "@types/lingui__core": "^2.7.0",
@@ -94,6 +95,7 @@
     "@storybook/react": "^6.0.21",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^8.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.1.0",
