fix: add sort check to ci/cd

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -11,6 +11,7 @@ jobs:
       - run: yarn
       - run: yarn lint
       - run: yarn format:check
+      - run: yarn sort:check
       - run: yarn test --coverage --verbose
       - run: yarn build
       - run: git diff --exit-code --name-only
